crates/neenee-tui-view/src/render/snapshots/neenee_tui_view__render__snapshot_tests__list_dir_expanded_renders_listing.snap
---
source: crates/neenee-tui-view/src/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 30)"
---
- List .
  src/
  tests/
  Cargo.toml
  README.md

backgrounds:
A=#070808  B=#111312  .=reset
0: A80
1: B80
2: B80
3: B80
4: B80
